# alt3rsnap

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TESTING.md  app.manifest  build.rs  resources.rc  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: TESTING.md
docs/superpowers/plans/: 2026-04-20-alt3rsnap-v0.1-mvp.md  2026-04-21-alt3rsnap-v0.2-m1-middle-click.md  2026-04-21-alt3rsnap-v0.2-m4-snap.md  2026-04-23-v0.2.1-polish.md
docs/superpowers/specs/: 2026-04-20-alt3rsnap-design.md  2026-04-21-alt3rsnap-v0.2-design.md  2026-04-23-v0.2.1-polish-design.md
src/: adapter.rs  autostart.rs  config.rs  config_ops.rs  dpi.rs  elevate.rs  fullscreen.rs  hook.rs  lib.rs  logging.rs  main.rs  monitors.rs  overlay.rs  swallow_latch.rs  tool_window.rs  tray.rs  win_api.rs  win_api_trait.rs
src/engine/: config.rs  geometry.rs  mod.rs  modifiers.rs  policy.rs  rules.rs  snap.rs  state.rs
tests/: adapter_middle_latch.rs  adapter_ordering.rs  config_parse.rs  engine_fsm.rs  engine_geometry.rs  engine_rules.rs  engine_snap.rs
tools/: gen_icon.py
