[package]
name = "alt3rsnap"
version = "0.2.1"
edition = "2021"
description = "Windows utility to move/resize windows with Alt+drag. Rust successor to AltSnap."
repository = "https://github.com/avymiatnin/alt3rsnap"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[lib]
name = "alt3rsnap"
path = "src/lib.rs"

[[bin]]
name = "alt3rsnap"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
regex = "1"
thiserror = "1"
directories = "4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
]

[build-dependencies]
embed-resource = "2"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
